[gd_scene load_steps=2 format=3 uid="uid://c5t5ibvxcoaaw"]

[ext_resource type="Script" path="res://Cards/card_ui.gd" id="1_g1nst"]

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 150.0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 1
script = ExtResource("1_g1nst")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
